Började på slide funktionen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!--todo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Catering</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        
+    </header>
+    <section id="place-for-sliding-img">
+
+        <img id="slide1" src="img/slide/slide1.jpg" alt="Bild på ett bord med cupcakes">
+        <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
+        <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
+    </section>
+
+
+
+    <script src="js/script.js"></script>
+</body>
+</html>
