First page och javascript

--- a/index.html
+++ b/index.html
@@ -9,13 +9,34 @@
 </head>
 <body>
     <header>
-        
+        <h1>Bread & Butter</h1>
     </header>
     <section id="place-for-sliding-img">
-
         <img id="slide1" src="img/slide/slide1.jpg" alt="Bild på ett bord med cupcakes">
         <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
         <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
+    </section>
+
+    <section id="first-section-main-page">
+        <article id="taylor-article">
+                <h3>
+                    Skräddarsy din upplevelse
+                </h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque repudiandae expedita at sequi, qui animi, dolorum dignissimos placeat ut quae ratione saepe non sed voluptatem dolore cum impedit minima.
+                </p>
+                <img src="img/regular/taylor.jpg" alt="">
+        </article>
+
+        <article id="allergy-article">
+            <h3>
+                Allergihantering
+            </h3>
+            <img src="" alt="">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi hic minus praesentium error non porro labore deleniti quisquam veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
+            </p>
+        </article>
     </section>
 
 
