lagt in väldigt många ändringar som fixade förra veckans problem

--- a/index.html
+++ b/index.html
@@ -9,35 +9,52 @@
 </head>
 <body>
     <header>
-        <h1>Bread & Butter</h1>
+        <h1 id="first-item-in-header">Bread & Butter</h1>
+        <nav id="second-item-in-header">
+            <ul id="link-list">
+                <li><a href="#">Bilder</a></li>
+                <li><a href="#">Kontakt</a></li>
+                <li><a href="#">Övrigt</a></li>
+                <li><a href="#">Hem</a></li>
+            </ul>
+            <div id="burger">
+                <div id="line1"></div>
+                <div id="line2"></div>
+                <div id="line3"></div>
+            </div>
+        </nav>
     </header>
+
     <section id="place-for-sliding-img">
-        <img id="slide1" src="img/slide/slide1.jpg" alt="Bild på ett bord med cupcakes">
+        <img id="slide_img" src="img/slide/slide1.jpg" alt="Bild på ett bord med cupcakes">
         <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
         <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
     </section>
-
+    <div class="line"></div>
     <section id="first-section-main-page">
         <article id="taylor-article">
+            <div>
                 <h3>
                     Skräddarsy din upplevelse
                 </h3>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque repudiandae expedita at sequi, qui animi, dolorum dignissimos placeat ut quae ratione saepe non sed voluptatem dolore cum impedit minima.
                 </p>
-                <img src="img/regular/taylor.jpg" alt="">
+            </div>
+                <img src="img/regular/taylor.jpg" alt="Bild på kock">
         </article>
-
+        <div class="line"></div>
         <article id="allergy-article">
-            <h3>
+            <h3 id="he">
                 Allergihantering
             </h3>
-            <img src="" alt="">
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi hic minus praesentium error non porro labore deleniti quisquam veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
+            <img src="img/regular/allergy.jpg" alt="Bild på korn">
+            <p id="te">
+                Lorem ipsum dolor sit amet consecter, elit. Sequi hic minus praesentium error non porro labore deleniti quisquam if veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
             </p>
         </article>
     </section>
+    <div class="line" ></div>
 
 
 
