--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1 id="first-item-in-header">Bread & Butter</h1>
         <nav id="second-item-in-header">
             <ul id="link-list">
-                <li><a href="#">Bilder</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Övrigt</a></li>
-                <li><a href="#">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="menu.html">Meny paket</a></li>
+                <li><a href="events.html">Event <br> och <br> dekoration</a></li>
+                <li><a href="Lokaler">Lokaler</a></li>
             </ul>
             <div id="burger">
                 <div id="line1"></div>
