en extra minipush

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="menu.html">Meny paket</a></li>
                 <li><a href="events.html">Event <br> och <br> dekoration</a></li>
-                <li><a href="Lokaler">Lokaler</a></li>
+                <li><a href="premises.html">Lokaler</a></li>
             </ul>
             <div id="burger">
                 <div id="line1"></div>
