slide function works etc

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul id="link-list">
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="menu.html">Meny paket</a></li>
-                <li><a href="events.html">Event <br> och <br> dekoration</a></li>
+                <li><a href="events.html">Event<br>och<br>dekoration</a></li>
                 <li><a href="premises.html">Lokaler</a></li>
             </ul>
             <div id="burger">
@@ -26,7 +26,7 @@
     </header>
 
     <section id="place-for-sliding-img">
-        <img id="slide_img" src="img/slide/slide1.jpg" alt="Bild på ett bord med cupcakes">
+        <img id="slide_img" src="img/slide/0_slide1.jpg" alt="Bild på ett bord med cupcakes">
         <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
         <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
     </section>
@@ -54,7 +54,7 @@
             </p>
         </article>
     </section>
-    <div class="line" ></div>
+    <div class="line"></div>
 
 
 
