--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,38 @@
         </nav>
     </header>
 
+    <section id="starting-section-menu">
+        <h3>Menypaket</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.</p>
+    </section>
+    <div id="line"></div>
+    <section id="italien-section">
+        <img id="pi" src="img/regular/italian-menu.jpg" alt="Italian buffé">
+        <h3 id="it">Italiensk meny</h3>
+        <p id="vi">Vi erbjuder:</p>
+        <ul id="li">
+            <li>Pastor</li>
+            <li>Pizzor</li>
+            <li>Chark brickor</li>
+            <li>Gelato</li>
+        </ul>
+    </section>
+    <div id="line"></div>
+    <section id="french-menu">
+        <h3 id="fr">Fransk meny</h3>
+        <img id="fm" src="img/regular/french-menu.jpg" alt="Picture of snails">
+        <p id="ft">Lorem ipsum dolor, s Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quam. s corrupti ab eveniet! In.</p>
+        <p id="ve">Vi erbjuder:</p>
+        <ul id="fl">
+            <li>Sniglar</li>
+            <li>Croque monsieur</li>
+            <li>Skaldjursplatå</li>
+            <li>Löksoppa</li>
+            <li>Patesserie</li>
+        </ul>
+
+        
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
