--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section id="place-for-sliding-img">
-        <img id="slide_img" src="img/slide/0_slide1.jpg" alt="Bild på ett bord med cupcakes">
+        <img id="slide_img" src="img/slide/0_slide1.jpg" alt="Slides">
         <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
         <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
     </section>
