--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
         <h3>Menypaket</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.</p>
     </section>
-    <div id="line"></div>
+    <div class="line"></div>
     <section id="italien-section">
         <img id="pi" src="img/regular/italian-menu.jpg" alt="Italian buffé">
         <h3 id="it">Italiensk meny</h3>
@@ -41,11 +41,11 @@
             <li>Gelato</li>
         </ul>
     </section>
-    <div id="line"></div>
+    <div class="line"></div>
     <section id="french-menu">
         <h3 id="fr">Fransk meny</h3>
         <img id="fm" src="img/regular/french-menu.jpg" alt="Picture of snails">
-        <p id="ft">Lorem ipsum dolor, s Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quam. s corrupti ab eveniet! In.</p>
+        <p id="ft">Lorem ipsum r sit amet consectetur adipisicing. ipsum dolor sit amet consectetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
         <p id="ve">Vi erbjuder:</p>
         <ul id="fl">
             <li>Sniglar</li>
@@ -53,9 +53,25 @@
             <li>Skaldjursplatå</li>
             <li>Löksoppa</li>
             <li>Patesserie</li>
+        </ul> 
+    </section>
+    <div class="line"></div>
+    <section id="vietnames-menu">
+        <h3 id="headline-viet">Vietnamesisk meny</h3>
+            <img id="img1-viet" src="img/regular/vietnames1.jpg" alt="Bild på pho">
+            <img id="img2-viet" src="img/regular/vietnames2.jpg" alt="Bild på springrolls">
+            <img id="img3-viet" src="img/regular/vietnames3.jpg" alt="Bild på bönor">
+        <p id="we-offer" >Vi erbjuder:</p>
+        <ul id="list1-viet">
+            <li>Banh Xeo</li>
+            <li>Bun Cha</li>
+            <li>Mi Quang</li>
         </ul>
-
-        
+        <ul id="list2-viet">
+            <li>Pho</li>
+            <li>Banh Mi</li>
+            <li>Springrolls</li>
+        </ul>
     </section>
     <script src="js/script.js"></script>
 </body>
