--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </h3>
             <img src="img/regular/allergy.jpg" alt="Bild på korn">
             <p id="te">
-                Lorem ipsum dolor sit amet consecter, elit. Sequi hic minus praesentium error non porro labore deleniti quisquam if veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
+                Lorem ipsum dolor sit amet consecter, elit. Sequi hic minus praesentium error non porro deleniti quisquam if veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
             </p>
         </article>
     </section>
