start last section in index html

--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
     <div class="line"></div>
     <section id="first-section-main-page">
         <article id="taylor-article">
-            <div>
-                <h3>
+                <h3 id="taylor-text">
                     Skräddarsy din upplevelse
                 </h3>
-                <p>
+                <p id="tayler-p-tag">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque repudiandae expedita at sequi, qui animi, dolorum dignissimos placeat ut quae ratione saepe non sed voluptatem dolore cum impedit minima.
                 </p>
-            </div>
                 <img src="img/regular/taylor.jpg" alt="Bild på kock">
         </article>
         <div class="line"></div>
@@ -55,7 +53,18 @@
         </article>
     </section>
     <div class="line"></div>
+    <Section id="section-office-meals">
+        <h3 id="meals-parent">Måltider</h3>
+        <h3 id="head-office">Huvudkontor</h3>
+        <article id="place-for-meals">
 
+        </article>
+        <article id="info">
+            <img id="image-place" src="" alt="">
+            <p id="contact-info">hlaj</p>
+        </article>
+        
+    </Section>
 
 
     <script src="js/script.js"></script>
