--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
             <img id="img1-viet" src="img/regular/vietnames1.jpg" alt="Bild på pho">
             <img id="img2-viet" src="img/regular/vietnames2.jpg" alt="Bild på springrolls">
             <img id="img3-viet" src="img/regular/vietnames3.jpg" alt="Bild på bönor">
-        <p id="we-offer" >Vi erbjuder:</p>
+        <p id="we-offer" >Vi erbjuder</p>
         <ul id="list1-viet">
             <li>Banh Xeo</li>
             <li>Bun Cha</li>
