--- a/index.html
+++ b/index.html
@@ -25,11 +25,37 @@
         </nav>
     </header>
 
+    <section id="main-page-cover">
+        <article id="intro">
+            <h2 id="welcome">
+                Catering till alla tillställningar
+            </h2>
+            <p id="intro-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nobis vel dignissimos temporibus. Obcaecati numquam praesentium, modi suntary mi accusantium cumque!
+            </p>
+        </article>
+    </section>
+
     <section id="place-for-sliding-img">
         <img id="slide_img" src="img/slide/0_slide1.jpg" alt="Slides">
         <img id="listerner-left" src="img/arrow/arrow.png" alt="Bild på pil">
         <img id="listerner-right" src="img/arrow/arrow.png" alt="Bild på pil">
     </section>
+
+    <section id="start-book">
+        <h3 id="to-book">
+            Att boka oss
+        </h3>
+        <p id="booking-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam laborum expedita, aliquid delectus reiciendis ducimus vitae iusto accusamus quo at? flubbis
+        </p>
+        <div class="book-button" id="first-book-button">
+            <h4>
+                Boka nu
+            </h4>
+        </div>
+    </section>
+
     <div class="line"></div>
     <section id="first-section-main-page">
         <article id="taylor-article">
