--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
         </article>
     </section>
     <div class="line"></div>
+    <section id="stopping-img-section">
+        <img id="stopping-img-img" src="img/regular/stopping-img.jpg" alt="Bild på bord">
+    </section>
+    <div class="line"></div>
+
     <Section id="section-office-meals">
         <h3 id="meals-parent">Måltider</h3>
         <h3 id="head-office">Huvudkontor</h3>
