--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     </section>
     <div class="line"></div>
     <section id="stopping-img-section">
-        <img id="stopping-img-img" src="img/regular/stopping-img.jpg" alt="Bild på bord">
+        <article id="square-text">
+            <h4></h4>
+        </article>
     </section>
     <div class="line"></div>
 
