--- a/index.html
+++ b/index.html
@@ -81,7 +81,18 @@
     <div class="line"></div>
     <section id="stopping-img-section">
         <article id="square-text">
-            <h4></h4>
+            <h3>
+                Öppettider
+            </h3>
+            <p> 
+                Mån 06-21 <br>
+                Tis 06-21 <br>
+                Ons 07-22 <br>
+                Tors 06-21 <br>
+                Fre 07-24 <br>
+                Lör 07-24 <br>
+                Sön 06-21 
+            </p>
         </article>
     </section>
     <div class="line"></div>
@@ -93,8 +104,12 @@
 
         </article>
         <article id="info">
-            <img id="image-place" src="" alt="">
-            <p id="contact-info">hlaj</p>
+            <img id="image-place" src="img/regular/here.jpg" alt="Karta">
+            <p id="copyright">*Bild tagen från google maps*</p>
+            <h4 id="contact-info">Nå oss på: <br><br></h4>
+            <p id="contact-ways">
+                Telefon <br> 072 382 70 10 <br><br> Instagram <br>Bread&Butter <br><br> Email <br> bread@gmail.se
+            </p>
         </article>
         
     </Section>
