--- a/events.html
+++ b/events.html
@@ -88,6 +88,31 @@
         <img src="img/regular/party.jpg" alt="Bild på fest">
     </section>
 
+    <div class="line"></div>
+    <section id="loan-section">
+        <article id="loan-art-1">
+            <h2>
+                Uthyrning <br><br>
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, in hic deleniti nihil sunt illo culpa excepturi non laborum explicabo numquam quae, porro, fugit itaque consequuntur dignissimos dolorum nam quas!
+            </p>
+        </article>
+        <article id="loan-art-2">
+            <article>
+                <h3>Vi erbjuder</h3>
+                <ul id="loan-list">
+                    <li>Stolar</li>
+                    <li>Serviser</li>
+                    <li>Bord</li>
+                    <li>Dekorationer</li>
+                    <li>Lokaler</li>
+                </ul>
+            </article>
+            <img src="img/regular/wedding-setting.jpg" alt="Ett dukat bord">
+        </article>
+
+    </section>
     
     <script src="js/script.js"></script>
 </body>
