--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <article id="info">
             <img id="image-place" src="img/regular/here.jpg" alt="Karta">
             <p id="copyright">*Bild tagen från google maps*</p>
-            <h4 id="contact-info">Nå oss på: <br><br></h4>
+            <h4 id="contact-info"><br> Nå oss på: <br><br></h4>
             <p id="contact-ways">
                 Telefon <br> 072 382 70 10 <br><br> Instagram <br>Bread&Butter <br><br> Email <br> bread@gmail.se
             </p>
