last section event

--- a/events.html
+++ b/events.html
@@ -109,9 +109,32 @@
                     <li>Lokaler</li>
                 </ul>
             </article>
-            <img src="img/regular/wedding-setting.jpg" alt="Ett dukat bord">
+            <article id="frame">
+                <img src="img/regular/wedding-setting.jpg" alt="Ett dukat bord">
+            </article>
         </article>
+    </section>
 
+    <div class="line"></div>
+
+    <section id="flex-waiters">
+        <article>
+            <h3>
+                Personal och servitörer <br><br>
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint molestiae a eveniet?
+            </p>
+            <p>
+                <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, hic!
+            </p>
+        </article>
+        <article id="wine-img">
+        </article>
+        <article>
+            <img src="img/regular/waiters-img-1.jpg" alt="Bild på drink">
+            <img src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
+        </article>
     </section>
     
     <script src="js/script.js"></script>
