--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <section id="starting-section-menu">
+    <section class="starting-section">
         <h3>Menypaket</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.</p>
     </section>
