--- a/premises.html
+++ b/premises.html
@@ -24,8 +24,87 @@
             </div>
         </nav>
     </header> 
+    <section class="starting-section">
+        <h2>
+            Lokaler
+        </h2>
+        <h4 id="margin-under">
+            Vi på Bread & Butter har lokaler för uthyrning
+        </h4>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quisquam atque sit adipisci. Consequuntur molestias sapiente atque animi nobis fugit aperiam! Autem eligendi, at doloribus ducimus voluptatum eos rem recusandae accusantium eaque qui magnam placeat quod mollitia.
+        </p>
+    </section>
+    <div class="book-button">
+        <h4>
+            Läs mer
+        </h4>
+    </div>
 
+    <div class="line"></div>
+
+    <section class="venue">
+        <article class="collection" id="text-venue1">
+            <h3 class="headline-venue">
+                UV festrummet
+            </h3>
+        </article>
+        <article class="text-button">
+            <div class="book-button-venue">Boka</div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+    </section>
+
+    <div class="line"></div>
+
+    <section class="venue">
+        <article class="collection" id="text-venue2">
+            <h3 class="headline-venue">
+                Klassiskt kapell
+            </h3>
+        </article>
+        <article class="text-button">
+            <div class="book-button-venue">Boka</div>
+            <p>
+                Lorem ipsum dolor sit, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+    </section>
     
+    <div class="line"></div>
+    
+    <section class="venue">
+        <article class="collection" id="text-venue3">
+            <h3 class="headline-venue">
+                Vita rummet
+            </h3>
+        </article>
+        <article class="text-button">
+            <div class="book-button-venue">Boka</div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+    </section>
+
+    <div class="line"></div>
+
+    <section class="venue">
+        <article class="collection" id="text-venue4">
+            <h3 class="headline-venue">
+                Glas kammaren
+            </h3>
+        </article>
+        <article class="text-button">
+            <div class="book-button-venue">Boka</div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
