photoshop och lite computer layout

--- a/menu.html
+++ b/menu.html
@@ -40,6 +40,9 @@
             <li>Chark brickor</li>
             <li>Gelato</li>
         </ul>
+        <p id="pit">
+            Lorem ipsum dolor, adipisicing elit. Corrupti, eum tenetur excepturi expedita consequatur dolor optio possimus minus necessitatibus at officia odio?
+        </p>
         <div class="book-button">
             Beställ här
         </div>
@@ -84,6 +87,80 @@
         Beställ här
     </div>
     <div class="line"></div>
+
+    <section id="mexican-section">
+        <h3>
+            Mexikansk meny
+        </h3>
+        <img src="img/regular/mexicanfood.jpg" alt="Tacos på bild">
+        <article id="inner-mexican-section">
+            <article id="inner-inner-mexican">
+                <p class="underline">
+                    Vi erbjuder
+                <p>
+                <ul id="mexican-list">
+                    <li>Tacos</li>
+                    <li>Enchiladas</li>
+                    <li>Elote</li>
+                    <li>Fajitas</li>
+                </ul>
+            </article>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quas voluptatum aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur amet dicta dignissimos.
+            </p>
+        </article>
+        <div class="book-button">Beställ här</div>
+    </section>
+
+
+
+
+
+
+
+
+    <div class="line"></div>
+
+    <footer class="footer">
+
+        <article class="footer-items">
+            <h3 class="underline">
+                LA lo so
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+        </article>
+        
+        <article class="footer-items">
+            <h3 class="underline">
+                Rikshögstag
+            </h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+
+        <article- class="footer-items">
+            <h3 class="underline">
+                Jobbsituation
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet.
+            </p>
+        </article>
+
+        <article class="footer-items" id="footer-grid">
+            <h3 class="underline" id="hfg">
+                Jobba hos oss
+            </h3>
+                <p id="tfg">
+                    Skicka in ditt CV på <br> work.bread@gmail.com
+                </p>
+                <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+        </article>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
