--- a/premises.html
+++ b/premises.html
@@ -68,7 +68,7 @@
         <article class="text-button">
             <div class="book-button-venue">Boka</div>
             <p>
-                Lorem ipsum dolor sit, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
+                Lorem ipsum dolor sit, adipisicing elit flubbis blubb. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing sit amet.
             </p>
         </article>
     </section>
@@ -104,6 +104,49 @@
             </p>
         </article>
     </section>
+
+    <div class="line"></div>
+
+    <footer class="footer">
+
+        <article class="footer-items">
+            <h3 class="underline">
+                LA lo so
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+        </article>
+        
+        <article class="footer-items">
+            <h3 class="underline">
+                Rikshögstag
+            </h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+
+        <article- class="footer-items">
+            <h3 class="underline">
+                Jobbsituation
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet.
+            </p>
+        </article>
+
+        <article class="footer-items" id="footer-grid">
+            <h3 class="underline" id="hfg">
+                Jobba hos oss
+            </h3>
+                <p id="tfg">
+                    Skicka in ditt CV på <br> work.bread@gmail.com
+                </p>
+                <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+        </article>
+
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
