--- a/events.html
+++ b/events.html
@@ -136,7 +136,49 @@
             <img src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
         </article>
     </section>
-    
+
+    <div class="line"></div>
+
+    <footer class="footer">
+
+        <article class="footer-items">
+            <h3 class="underline">
+                LA lo so
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+        </article>
+        
+        <article class="footer-items">
+            <h3 class="underline">
+                Rikshögstag
+            </h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing.
+            </p>
+        </article>
+
+        <article- class="footer-items">
+            <h3 class="underline">
+                Jobbsituation
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet.
+            </p>
+        </article>
+
+        <article class="footer-items" id="footer-grid">
+            <h3 class="underline" id="hfg">
+                Jobba hos oss
+            </h3>
+                <p id="tfg">
+                    Skicka in ditt CV på <br> work.bread@gmail.com
+                </p>
+                <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+        </article>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
