lokaler i computer layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p>
                 <img src="img/regular/taylor.jpg" alt="Bild på kock">
         </article>
-        <div class="line"></div>
+        <div class="disapear-line" class="line"></div>
         <article id="allergy-article">
             <h3 id="he">
                 Allergihantering
@@ -128,7 +128,7 @@
 
     <footer class="footer">
 
-        <article class="footer-items">
+        <article class="footer-items" id="art-foot1">
             <h3 class="underline">
                 LA lo so
             </h3>
@@ -137,7 +137,7 @@
             </p>
         </article>
         
-        <article class="footer-items">
+        <article class="footer-items" id="art-foot2">
             <h3 class="underline">
                 Rikshögstag
             </h3>
@@ -146,7 +146,7 @@
             </p>
         </article>
 
-        <article- class="footer-items">
+        <article- class="footer-items" id="art-foot3">
             <h3 class="underline">
                 Jobbsituation
             </h3>
