har gjort klart index sidan för mobil totalt nu

--- a/premises.html
+++ b/premises.html
@@ -25,23 +25,25 @@
         </nav>
     </header> 
 
-
-    <section class="starting-section">
-        <h2>
-            Lokaler
-        </h2>
-        <h4 id="margin-under">
-            Vi på Bread & Butter har lokaler för uthyrning
-        </h4>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quisquam atque sit adipisci. Consequuntur molestias sapiente atque animi nobis fugit aperiam! Autem eligendi, at doloribus ducimus voluptatum eos rem recusandae accusantium eaque qui magnam placeat quod mollitia.
-        </p>
+    <section id="flex-starting-section">
+        <section class="starting-section">
+            <h2>
+                Lokaler
+            </h2>
+            <h4 id="margin-under">
+                Vi på Bread & Butter har lokaler för uthyrning
+            </h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quisquam atque sit adipisci. Consequuntur molestias sapiente atque animi nobis fugit aperiam! Autem eligendi, at doloribus ducimus voluptatum eos rem recusandae accusantium eaque qui magnam placeat quod mollitia.
+            </p>
+    
+            <div class="book-button">
+                <h4>
+                    Läs mer
+                </h4>
+            </div>
+        </section>
     </section>
-    <div class="book-button">
-        <h4>
-            Läs mer
-        </h4>
-    </div>
 
     <div class="line"></div>
 
