event layout desktop

--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Event</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -32,109 +32,114 @@
 
     <div class="line"></div>
 
-    <section id="wedding-section">
-        <h3 id="head-wed">
-            Bröllop
-        </h3>
-        <img id="wed-img" src="img/regular/wedding.jpg" alt="Bild av bröllop">
-        <p id="wed-txt">
-            Lorem ipsum dolor laboriosam odio vitae asperiores, la vie da local mosi dicta dignissimos? <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam accusantium tenetur.
-        </p>
-    </section>
-
-    <div class="line"></div>
-
-    <section id="flex-funeral">
-        <article id="art-funeral">
-            <h3>
-                Begravning
+    <section id="event-flex">
+        <section id="wedding-section" class="desktop-event-flex">
+            <h3 id="head-wed">
+                Bröllop
             </h3>
-            <p>
-                Lorem ipsum dolo adipisicing elit. Iusto molestias tempora autem atque magnam nostrum eligendi at fugit adipisci optio.
+            <img id="wed-img" src="img/regular/wedding.jpg" alt="Bild av bröllop">
+            <p id="wed-txt">
+                Lorem ipsum dolor laboriosam odio vitae asperiores, la vie da local mosi dicta dignissimos? <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam accusantium tenetur.
             </p>
-            <img id="short-church" src="img/regular/funeral-short.jpg" alt="bild på kyrka">
-        </article>
-        <img id="long-church" src="img/regular/funeral-long.jpg" alt="bild på kyrka">
-    </section>
+        </section>
 
-    <div class="line"></div>
+        <div class="disapear-line"></div>
 
-    <section id="flex-dop">
-        <article id="dop-1">
-            <h3 id="he-dop">
-                Dop
-            </h3>
-            <img src="img/regular/dop-long.jpg" alt="Bild på dop">
-        </article>
-        <article id="dop-2">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet. Vero neque aliquam doloremque debitis culpa odit.
-            </p>
-            <img src="img/regular/dop-short.jpg" alt="Bild på bebis">
-        </article>
+        <section id="flex-funeral" class="desktop-event-flex">
+            <article id="art-funeral">
+                <h3>
+                    Begravning
+                </h3>
+                <p>
+                    Lorem ipsum dolo adipisicing elit. Iusto molestias tempora autem atque magnam nostrum eligendi at fugit adipisci optio.
+                </p>
+                <img id="short-church" src="img/regular/funeral-short.jpg" alt="bild på kyrka">
+            </article>
+            <img id="long-church" src="img/regular/funeral-long.jpg" alt="bild på kyrka">
+        </section>
+
+        <div class="disapear-line"></div>
+
+        <section class="desktop-event-flex" id="flex-dop">
+            <article id="dop-1">
+                <h3 id="he-dop">
+                    Dop
+                </h3>
+                <img id="long-dop-img" src="img/regular/dop-long.jpg" alt="Bild på dop">
+            </article>
+            <article id="dop-2">
+                <p id="dop-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet. Vero neque aliquam doloremque debitis culpa odit.
+                </p>
+                <img id="short-dop-img" src="img/regular/dop-short.jpg" alt="Bild på bebis">
+            </article>
+        </section>
     </section>
     
-    <div class="line"></div>
+    <div class="disapear-line"></div>
     
-    <section id="party-section">
-        <article>
-            <h3 id="head-party">
-                Fest
-            </h3>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis minus repellendus expedita, enim eveniet fuga itaque excepturi nostrum sit placeat velit magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam libero sansin animi! <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem natus culpa fugiat.
-            </p>
-        </article>
-        <img src="img/regular/party.jpg" alt="Bild på fest">
-    </section>
-
-    <div class="line"></div>
-    <section id="loan-section">
-        <article id="loan-art-1">
-            <h2>
-                Uthyrning <br><br>
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, in hic deleniti nihil sunt illo culpa excepturi non laborum explicabo numquam quae, porro, fugit itaque consequuntur dignissimos dolorum nam quas!
-            </p>
-        </article>
-        <article id="loan-art-2">
+    <section id="event-flex2">
+        <section id="party-section" class="desktop-event-flex2">
             <article>
-                <h3>Vi erbjuder</h3>
-                <ul id="loan-list">
-                    <li>Stolar</li>
-                    <li>Serviser</li>
-                    <li>Bord</li>
-                    <li>Dekorationer</li>
-                    <li>Lokaler</li>
-                </ul>
+                <h3 id="head-party">
+                    Fest
+                </h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis minus repellendus expedita, enim eveniet fuga itaque excepturi nostrum sit placeat velit magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam libero sansin animi! <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem natus culpa fugiat.
+                </p>
             </article>
-            <article id="frame">
-                <img src="img/regular/wedding-setting.jpg" alt="Ett dukat bord">
+            <img id="img-party" src="img/regular/party.jpg" alt="Bild på fest">
+        </section>
+
+        <div class="disapear-line"></div>
+
+        <section id="loan-section" class="desktop-event-flex2">
+            <article id="loan-art-1">
+                <h2>
+                    Uthyrning <br><br>
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, in hic deleniti nihil sunt illo culpa excepturi non laborum explicabo numquam quae, porro, fugit itaque consequuntur dignissimos dolorum nam quas!
+                </p>
             </article>
-        </article>
-    </section>
+            <article id="loan-art-2">
+                <article>
+                    <h3>Vi erbjuder</h3>
+                    <ul id="loan-list">
+                        <li>Stolar</li>
+                        <li>Serviser</li>
+                        <li>Bord</li>
+                        <li>Dekorationer</li>
+                        <li>Lokaler</li>
+                    </ul>
+                </article>
+                <article id="frame">
+                    <img src="img/regular/wedding-setting.jpg" alt="Ett dukat bord">
+                </article>
+            </article>
+        </section>
 
-    <div class="line"></div>
+        <div class="disapear-line"></div>
 
-    <section id="flex-waiters">
-        <article>
-            <h3>
-                Personal och servitörer <br><br>
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint molestiae a eveniet?
-            </p>
-            <p>
-                <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, hic!
-            </p>
-        </article>
-        <article id="wine-img">
-        </article>
-        <article>
-            <img src="img/regular/waiters-img-1.jpg" alt="Bild på drink">
-            <img src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
-        </article>
+        <section id="flex-waiters" class="desktop-event-flex2">
+            <article>
+                <h3>
+                    Personal och servitörer <br><br>
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint molestiae a eveniet?
+                </p>
+                <p>
+                    <br> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, hic!
+                </p>
+            </article>
+            <article id="wine-img">
+            </article>
+            <article>
+                <img src="img/regular/waiters-img-1.jpg" alt="Bild på drink">
+                <img src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
+            </article>
+        </section>
     </section>
 
     <div class="line"></div>
