--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
                 </h4>
             </div>
         </section>
+
+        <div id="stopping-img-section-again">
+            <article id="square-text">
+                <h3>
+                    Öppettider
+                </h3>
+                <p> 
+                    Mån 06-21 <br>
+                    Tis 06-21 <br>
+                    Ons 07-22 <br>
+                    Tors 06-21 <br>
+                    Fre 07-24 <br>
+                    Lör 07-24 <br>
+                    Sön 06-21 
+                </p>
+            </article>
+        </div>
     </article>
 
     <div class="line"></div>
@@ -80,7 +97,7 @@
             </p>
         </article>
     </section>
-    <div class="line"></div>
+    <div class="disapear-line"></div>
     <section id="stopping-img-section">
         <article id="square-text">
             <h3>
